# Wordle-Solver

./: .gitignore  CMakeLists.txt  README.md
data/: serial_solver_guess_list.txt  test_words.txt  wordle_words.txt  words.txt  words_list.txt
py-src/: utils.py  wordle_bot.py
python/: solver.py  sorter.py  utils.py
src/: data_generation.py  solver.cu  wordle_bot.cu
src-py/: main.py  parallel_solver.py  serial_solver.py  solver.py  sorter.py  utils.py
